Rajout de tout plein de trucs
Ajouts:
-item avec class custom
-une catégorie en créa
-un bloc sans class custom

-des noms fr_fr
-des textures
-des tags
-une loot table pour le nouveau bloc

-meuh

--- a/src/main/resources/assets/test_fabric/lang/fr_fr.json
+++ b/src/main/resources/assets/test_fabric/lang/fr_fr.json
@@ -1,3 +1,8 @@
 {
-  "item.test_fabric.premier_item": "Mon premier item avec Fabric"
+  "itemGroup.test_fabric.groupe_pour_mes_items": "Un groupe pour mes items",
+
+  "item.test_fabric.premier_item": "Mon premier item avec Fabric",
+  "item.test_fabric.un_item_avec_class_custom": "Un item avec class custom",
+
+  "block.test_fabric.un_premier_bloc": "Un premier bloc"
 }
