Ajout d'un bloc avec class custom
Il fait du bruit quand on clique dessus, et il dit un truc aléatoire(voir méthode donneUnTrucADire())

--- a/src/main/resources/assets/test_fabric/lang/fr_fr.json
+++ b/src/main/resources/assets/test_fabric/lang/fr_fr.json
@@ -4,5 +4,6 @@
   "item.test_fabric.premier_item": "Mon premier item avec Fabric",
   "item.test_fabric.un_item_avec_class_custom": "Un item avec class custom",
 
-  "block.test_fabric.un_premier_bloc": "Un premier bloc"
+  "block.test_fabric.un_premier_bloc": "Un premier bloc",
+  "block.test_fabric.un_bloc_qui_a_la_classe": "Un bloc qui a la classe"
 }
